--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "dev": "docusaurus start",
+    "dev-cn": "docusaurus start --locale zh-cn",
+    "dev-tw": "docusaurus start --locale zh-tw",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
