--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/core": "^2.0.0-beta.7",
     "@docusaurus/plugin-google-gtag": "^2.0.0-beta.7",
     "@docusaurus/preset-classic": "^2.0.0-beta.7",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.7",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
