--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,22 @@
   "markdownlint.config": {
     "default": true,
     "MD033": false,
-  }
+  },
+  "files.associations": {
+    "*.md": "mdx"
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.options": {
+    "extensions": [".js", ".jsx", ".md", ".mdx", ".ts", ".tsx"]
+  },
+  "eslint.validate": [
+    "markdown",
+    "mdx",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ]
 }
