--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
     "MD033": false,
   },
   "files.associations": {
-    "*.md": "mdx"
+    "*.md": "markdown"
   },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
