--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
+    "initial": "rm -rf yarn.lock node_modules && yarn && yarn dev",
     "dev": "docusaurus start",
     "dev-cn": "docusaurus start --locale zh-cn",
     "dev-tw": "docusaurus start --locale zh-tw",
@@ -16,8 +17,8 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.15",
-    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.15",
+    "@docusaurus/core": "^2.0.0-beta.17",
+    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.17",
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
