--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/core": "^2.3.1",
     "@docusaurus/plugin-google-gtag": "^2.2.0",
     "@docusaurus/preset-classic": "^2.2.0",
     "@docusaurus/remark-plugin-npm2yarn": "^2.2.0",
@@ -26,8 +26,8 @@
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
