--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.4.0",
-    "@docusaurus/types": "^3.4.0"
+    "@docusaurus/types": "^3.4.0",
+    "dotenv": "^16.4.5"
   },
   "engines": {
     "node": ">=18.0"
