--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusaurus-blog",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -41,7 +41,7 @@
     "dotenv": "^16.4.5"
   },
   "engines": {
-    "node": ">=18.0"
+    "node": ">=18.0 || >=20.0 || >=22.0"
   },
   "browserslist": {
     "production": [
@@ -54,6 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "packageManager": "yarn@4.6.0"
+  }
 }
