[Feature][config] Add i18n support for custom pages and update package scripts
Wrap all homepage and about page UI text with <Translate>. Generate
translation JSON for 6 locales (zh-tw, zh-cn, en, ja, ko, es).
Update package.json: bump version to 1.0.0, switch from yarn to bun,
add per-locale dev/build scripts, remove stale fr/de/ar commands.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "docusaurus-blog",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "initial": "rm -rf yarn.lock node_modules && yarn && yarn dev",
+    "initial": "rm -rf bun.lockb node_modules && bun install && bun run dev",
     "dev": "docusaurus start --port 3010",
-    "dev-tw": "docusaurus start --locale zh-tw",
-    "dev-en": "docusaurus start --locale en",
-    "dev-ja": "docusaurus start --locale ja",
-    "dev-fr": "docusaurus start --locale fr",
-    "dev-de": "docusaurus start --locale de",
-    "dev-ar": "docusaurus start --locale ar",
+    "dev:tw": "docusaurus start --locale zh-tw",
+    "dev:cn": "docusaurus start --locale zh-cn",
+    "dev:en": "docusaurus start --locale en",
+    "dev:ja": "docusaurus start --locale ja",
+    "dev:ko": "docusaurus start --locale ko",
+    "dev:es": "docusaurus start --locale es",
     "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
+    "build:tw": "docusaurus build --locale zh-tw",
+    "build:cn": "docusaurus build --locale zh-cn",
+    "build:en": "docusaurus build --locale en",
+    "build:ja": "docusaurus build --locale ja",
+    "build:ko": "docusaurus build --locale ko",
+    "build:es": "docusaurus build --locale es",
     "serve": "docusaurus serve",
+    "clear": "docusaurus clear",
+    "deploy": "docusaurus deploy",
+    "swizzle": "docusaurus swizzle",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
