[Feature][config] Add pt-BR, de, fr, vi locales to i18n config

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "dev:ja": "docusaurus start --locale ja",
     "dev:ko": "docusaurus start --locale ko",
     "dev:es": "docusaurus start --locale es",
+    "dev:pt-BR": "docusaurus start --locale pt-BR",
+    "dev:de": "docusaurus start --locale de",
+    "dev:fr": "docusaurus start --locale fr",
+    "dev:vi": "docusaurus start --locale vi",
     "build": "docusaurus build",
     "build:tw": "docusaurus build --locale zh-tw",
     "build:cn": "docusaurus build --locale zh-cn",
@@ -19,6 +23,10 @@
     "build:ja": "docusaurus build --locale ja",
     "build:ko": "docusaurus build --locale ko",
     "build:es": "docusaurus build --locale es",
+    "build:pt-BR": "docusaurus build --locale pt-BR",
+    "build:de": "docusaurus build --locale de",
+    "build:fr": "docusaurus build --locale fr",
+    "build:vi": "docusaurus build --locale vi",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
     "deploy": "docusaurus deploy",
