[Chore][deps] Update baseline-browser-mapping and claude settings

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@docusaurus/theme-search-algolia": "^3.9.2",
     "@mdx-js/react": "^3.0.0",
     "@svgr/webpack": "^8.1.0",
+    "baseline-browser-mapping": "^2.9.19",
     "clsx": "^2.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^2.1.0",
